2016-09-22  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/js/greenbone.js (start_auto_refresh): Add to gsa
	object and do not start auto-refresh as long a dashboard is in edit
	mode.
	(stop_auto_refresh): Add to gsa object.

	* src/html/classic/js/gsa_dashboard.js (Dashboard.prototype.startEdit):
	Stop the auto-refresh on starting edit mode.
	(Dashboard.prototype.stopEdit): Start the auto-refresh on stopping
	edit mode.

2016-09-22  Matthew Mundell <matthew.mundell@greenbone.net>

	* CMakeLists.txt: Allow OPENVAS_RUN_DIR to be passed in.

2016-09-22  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/graphics.xsl (js-scan-management-top-visualization)
	(js-assets-top-visualization, js-secinfo-top-visualization)
	(js-notes-top-visualization, js-overrides-top-visualization): Add
	data-hide-filter-select attribute to dashboard definition divs to
	hide the filter drop-downs.

	* src/html/classic/omp.xsl (get_tasks_chart, get_aggregate)
	(get_assets_chart): Add data-hide-filter-select attribute to dashboard
	definition divs.

	* src/html/classic/js/gsa_dashboard.js
	(DashboardDisplay.prototype._updateFilters): Also include filters where
	type is an empty string, i.e. filters without type restrictions.
	(on_ready): Get hide_filter_select option from dashboard div.

2016-09-22  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (main): Call omp_init in the --unix-socket case, so that
	the manager address variables are setup.

2016-09-22  Matthew Mundell <matthew.mundell@greenbone.net>

	* CMakeLists.txt: Add OPENVAS_RUN_DIR.

	* src/CMakeLists.txt: Add OPENVAS_RUN_DIR.

2016-09-21  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/gsad_base.c (login_xml): Add missing comma in first call of
	xml_string_append.

2016-09-21  Matthew Mundell <matthew.mundell@greenbone.net>

	Sort out UNIX socket default.

	* src/gsad_omp.c (omp_init): Prefer the UNIX option to connection to